@@ -2,6 +2,15 @@
  * $Id$
  */
 
+2010-11-04 07:22 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  *  include/wxHarbour/wxh.h
+  *  include/wxHarbour/xho_classes.h
+     * moved some function prototypes to xho_classes.h
+
+  *  src/common/xho_classes.cpp
+     ! Fixed hash map to compile with QHash maps
+     * added conditional compiling to separate QT/WX constructs
+
 2010-11-03 22:16 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   *  GNUmakefile
   *  include/wxHarbour/wxh.h
